--- a/Mini Site/page.html
+++ b/Mini Site/page.html
@@ -9,22 +9,41 @@
 </head>
 <body>
     <main class="container-page">
-        <div class="text-container">
-            <article class="text">
-                <h1>Lorem ipsum</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-                    Rem enim nemo illum rerum dolor placeat sed, magnam autem corporis
-                     maxime voluptates consequuntur, quas et iste quam vero. Ipsam, dolore dolorem!
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-                    Rem enim nemo illum rerum dolor placeat sed, magnam autem corporis
-                     maxime voluptates consequuntur, quas et iste quam vero. Ipsam, dolore dolorem!
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-                    Rem enim nemo illum rerum dolor placeat sed, magnam autem corporis
-                     maxime voluptates consequuntur, quas et iste quam vero. Ipsam, dolore dolorem!
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-                    Rem enim nemo illum rerum dolor placeat sed, magnam autem corporis
-                     maxime voluptates consequuntur, quas et iste quam vero. Ipsam, dolore dolorem!</p>
-            </article>
+        <div class="cute">
+            <div class="text-container-left">
+                <article class="text-left">
+                    <h1>Lorem ipsum</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                        Rem enim nemo illum rerum dolor placeat sed, magnam autem corporis
+                         maxime voluptates consequuntur, quas et iste quam vero. Ipsam, dolore dolorem!
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                        Rem enim nemo illum rerum dolor placeat sed, magnam autem corporis
+                         maxime voluptates consequuntur, quas et iste quam vero. Ipsam, dolore dolorem!
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                        Rem enim nemo illum rerum dolor placeat sed, magnam autem corporis
+                         maxime voluptates consequuntur, quas et iste quam vero. Ipsam, dolore dolorem!
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                        Rem enim nemo illum rerum dolor placeat sed, magnam autem corporis
+                         maxime voluptates consequuntur, quas et iste quam vero. Ipsam, dolore dolorem!</p>
+                </article>
+            </div>
+            <div class="text-container-right">
+                <article class="text-right">
+                    <h1>Lorem ipsum</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                        Rem enim nemo illum rerum dolor placeat sed, magnam autem corporis
+                         maxime voluptates consequuntur, quas et iste quam vero. Ipsam, dolore dolorem!
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                        Rem enim nemo illum rerum dolor placeat sed, magnam autem corporis
+                         maxime voluptates consequuntur, quas et iste quam vero. Ipsam, dolore dolorem!
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                        Rem enim nemo illum rerum dolor placeat sed, magnam autem corporis
+                         maxime voluptates consequuntur, quas et iste quam vero. Ipsam, dolore dolorem!
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                        Rem enim nemo illum rerum dolor placeat sed, magnam autem corporis
+                         maxime voluptates consequuntur, quas et iste quam vero. Ipsam, dolore dolorem!</p>
+                </article>
+            </div>
         </div>
     </main>
 </body>
