--- a/Mini Site/page.html
+++ b/Mini Site/page.html
@@ -11,7 +11,8 @@
     <main class="container-page">
         <div class="cute">
             <div class="text-container-left">
-                <article class="text-left">
+                <button onclick="changeColorL()" class="read-button">Click here to read</button>
+                <article class="hidden"  id="view-text-box-left">
                     <h1>Lorem ipsum</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
                         Rem enim nemo illum rerum dolor placeat sed, magnam autem corporis
@@ -28,7 +29,8 @@
                 </article>
             </div>
             <div class="text-container-right">
-                <article class="text-right">
+                <button onclick="changeColorR()" class="read-button">Click here to read</button>
+                <article class="hidden" id="view-text-box-right">
                     <h1>Lorem ipsum</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
                         Rem enim nemo illum rerum dolor placeat sed, magnam autem corporis
@@ -46,5 +48,6 @@
             </div>
         </div>
     </main>
+    <script src="script.js"></script>
 </body>
 </html>
