--- a/Mini Site/page.html
+++ b/Mini Site/page.html
@@ -16,17 +16,17 @@
                     <h1>Lorem ipsum</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
                         Rem enim nemo illum rerum dolor placeat sed, magnam autem corporis
-                         maxime voluptates consequuntur, quas et iste quam vero. Ipsam, dolore dolorem!
+                        maxime voluptates consequuntur, quas et iste quam vero. Ipsam, dolore dolorem!
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
                         Rem enim nemo illum rerum dolor placeat sed, magnam autem corporis
                          maxime voluptates consequuntur, quas et iste quam vero. Ipsam, dolore dolorem!
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-                        Rem enim nemo illum rerum dolor placeat sed, magnam autem corporis
+                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                         Rem enim nemo illum rerum dolor placeat sed, magnam autem corporis
                          maxime voluptates consequuntur, quas et iste quam vero. Ipsam, dolore dolorem!
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
                         Rem enim nemo illum rerum dolor placeat sed, magnam autem corporis
                          maxime voluptates consequuntur, quas et iste quam vero. Ipsam, dolore dolorem!</p>
-                </article>
+                        </article>
             </div>
             <div class="text-container-right">
                 <button onclick="changeColorR()" class="read-button">Click here to read</button>
@@ -35,18 +35,19 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
                         Rem enim nemo illum rerum dolor placeat sed, magnam autem corporis
                          maxime voluptates consequuntur, quas et iste quam vero. Ipsam, dolore dolorem!
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-                        Rem enim nemo illum rerum dolor placeat sed, magnam autem corporis
+                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                         Rem enim nemo illum rerum dolor placeat sed, magnam autem corporis
                          maxime voluptates consequuntur, quas et iste quam vero. Ipsam, dolore dolorem!
+                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                        Rem enim nemo illum rerum dolor placeat sed, magnam autem corporis
+                        maxime voluptates consequuntur, quas et iste quam vero. Ipsam, dolore dolorem!
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
                         Rem enim nemo illum rerum dolor placeat sed, magnam autem corporis
-                         maxime voluptates consequuntur, quas et iste quam vero. Ipsam, dolore dolorem!
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-                        Rem enim nemo illum rerum dolor placeat sed, magnam autem corporis
-                         maxime voluptates consequuntur, quas et iste quam vero. Ipsam, dolore dolorem!</p>
-                </article>
+                        maxime voluptates consequuntur, quas et iste quam vero. Ipsam, dolore dolorem!</p>
+                    </article>
+                </div>
             </div>
-        </div>
+            <img class="arrow" src="images/arrow-icon.png" alt="Arrow icon" width="8%">
     </main>
     <script src="script.js"></script>
 </body>
