--- a/Mini Site/page.html
+++ b/Mini Site/page.html
@@ -19,13 +19,13 @@
                         maxime voluptates consequuntur, quas et iste quam vero. Ipsam, dolore dolorem!
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
                         Rem enim nemo illum rerum dolor placeat sed, magnam autem corporis
-                         maxime voluptates consequuntur, quas et iste quam vero. Ipsam, dolore dolorem!
-                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-                         Rem enim nemo illum rerum dolor placeat sed, magnam autem corporis
-                         maxime voluptates consequuntur, quas et iste quam vero. Ipsam, dolore dolorem!
+                            maxime voluptates consequuntur, quas et iste quam vero. Ipsam, dolore dolorem!
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                            Rem enim nemo illum rerum dolor placeat sed, magnam autem corporis
+                            maxime voluptates consequuntur, quas et iste quam vero. Ipsam, dolore dolorem!
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
                         Rem enim nemo illum rerum dolor placeat sed, magnam autem corporis
-                         maxime voluptates consequuntur, quas et iste quam vero. Ipsam, dolore dolorem!</p>
+                            maxime voluptates consequuntur, quas et iste quam vero. Ipsam, dolore dolorem!</p>
                         </article>
             </div>
             <div class="text-container-right">
@@ -34,11 +34,11 @@
                     <h1>Lorem ipsum</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
                         Rem enim nemo illum rerum dolor placeat sed, magnam autem corporis
-                         maxime voluptates consequuntur, quas et iste quam vero. Ipsam, dolore dolorem!
-                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-                         Rem enim nemo illum rerum dolor placeat sed, magnam autem corporis
-                         maxime voluptates consequuntur, quas et iste quam vero. Ipsam, dolore dolorem!
-                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                            maxime voluptates consequuntur, quas et iste quam vero. Ipsam, dolore dolorem!
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                            Rem enim nemo illum rerum dolor placeat sed, magnam autem corporis
+                            maxime voluptates consequuntur, quas et iste quam vero. Ipsam, dolore dolorem!
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
                         Rem enim nemo illum rerum dolor placeat sed, magnam autem corporis
                         maxime voluptates consequuntur, quas et iste quam vero. Ipsam, dolore dolorem!
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
@@ -47,7 +47,9 @@
                     </article>
                 </div>
             </div>
-            <img class="arrow" src="images/arrow-icon.png" alt="Arrow icon" width="8%">
+            <a class="arrow" href="image-page.html">
+                <img src="images/arrow-icon.png" alt="Arrow icon" width="100%">
+            </a>
     </main>
     <script src="script.js"></script>
 </body>
