Starting images page

--- a/Mini Site/image-page.html
+++ b/Mini Site/image-page.html
@@ -3,9 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/png" href="images/head-icon.png">
+    <title>Love you</title>
 </head>
 <body>
-    <h1>omg hiii</h1>
+    <header class="header">
+        <h1 class="title-image-page">Scrool to see the pictures</h1>
+    </header>
+    <main class="image-page-container">
+        <div class="image-box">
+            <div class="images">
+                <div class="slide first">
+                    <img src="images/test-image.jpg" alt="" width="253%">
+                </div>
+                <div class="slide">
+                    <img src="images/test-image.jpg" alt="" width="253%">
+                </div>
+                <div class="slide">
+                    <img src="images/test-image.jpg" alt="" width="253%">
+                </div>
+            </div>
+        </div>
+        <button class="prev">&#10094;</button>
+        <button class="next">&#10095;</button>
+    </main>
+    <script src="script.js"></script>
 </body>
 </html>
