adding pictures and cute icons

--- a/Mini Site/image-page.html
+++ b/Mini Site/image-page.html
@@ -7,26 +7,66 @@
     <link rel="icon" type="image/png" href="images/head-icon.png">
     <title>Love you</title>
 </head>
-<body>
-    <header class="header">
-        <h1 class="title-image-page">Scrool to see the pictures</h1>
-    </header>
+<body class="body-page">
     <main class="image-page-container">
-        <div class="image-box">
-            <div class="images">
-                <div class="slide first">
-                    <img src="images/test-image.jpg" alt="" width="253%">
-                </div>
-                <div class="slide">
-                    <img src="images/test-image.jpg" alt="" width="253%">
-                </div>
-                <div class="slide">
-                    <img src="images/test-image.jpg" alt="" width="253%">
+        <div class="test">
+            <div class="little-images">
+                <img src="images/icon1.png" alt="Cat Icon" width="45%">
+                <img src="images/icon2.png" alt="Cat Icon" width="45%">
+                <img src="images/icon3.png" alt="Cat Icon" width="50%">
+            </div>
+            <div class="image-box">
+                <div class="images">
+                    <div class="slide first">
+                        <img src="images/pic8.jpeg" alt="" width="100%">
+                    </div>
+                    <div class="slide">
+                        <img src="images/pic6.jpeg" alt="" width="100%">
+                    </div>
+                    <div class="slide">
+                        <img src="images/pic1.jpg" alt="" width="100%">
+                    </div>
+                    <div class="slide">
+                        <img src="images/pic2.jpg" alt="" width="100%">
+                    </div>
+                    <div class="slide">
+                        <img src="images/pic3.jpg" alt="" width="100%">
+                    </div>
+                    <div class="slide">
+                        <img src="images/pic4.jpg" alt="" width="100%">
+                    </div>
+                    <div class="slide">
+                        <img src="images/pic5.jpg" alt="" width="100%">
+                    </div>
+                    <div class="slide">
+                        <img src="images/pic6.jpg" alt="" width="100%">
+                    </div>
+                    <div class="slide">
+                        <img src="images/pic7.jpg" alt="" width="100%">
+                    </div>
+                    <div class="slide">
+                        <img src="images/pic9.jpeg" alt="" width="100%">
+                    </div>
+                    <div class="slide">
+                        <img src="images/pic10.jpeg" alt="" width="100%">
+                    </div>
+                    <div class="slide">
+                        <img src="images/pic11.jpeg" alt="" width="100%">
+                    </div>
+                    <div class="slide">
+                        <img src="images/pic12.jpeg" alt="" width="100%">
+                    </div>
+                    <div class="slide">
+                        <img src="images/pic13.jpeg" alt="" width="100%">
+                    </div>
                 </div>
             </div>
+            <div class="little-images">
+                <img src="images/icon4.png" alt="Cat Icon" width="45%">
+                <img src="images/icon5.png" alt="Cat Icon" width="37%">
+                <img src="images/icon6.png" alt="Cat Icon" width="45%">
+            </div>
         </div>
-        <button class="prev">&#10094;</button>
-        <button class="next">&#10095;</button>
     </main>
     <script src="script.js"></script>
 </body>
