Adding animations on icons

--- a/Mini Site/image-page.html
+++ b/Mini Site/image-page.html
@@ -11,21 +11,21 @@
     <main class="image-page-container">
         <div class="test">
             <div class="little-images">
-                <img src="images/icon1.png" alt="Cat Icon" width="45%">
-                <img src="images/icon2.png" alt="Cat Icon" width="45%">
-                <img src="images/icon3.png" alt="Cat Icon" width="50%">
+                <img class="icon" src="images/icon1.png" alt="Cat Icon" width="45%">
+                <img class="icon" src="images/icon2.png" alt="Cat Icon" width="45%">
+                <img class="icon" src="images/icon3.png" alt="Cat Icon" width="50%">
             </div>
             <div class="image-box">
                 <div class="images">
-                    <div class="slide first">
+                     <div class="slide first">
                         <img src="images/pic8.jpeg" alt="" width="100%">
                     </div>
                     <div class="slide">
                         <img src="images/pic6.jpeg" alt="" width="100%">
                     </div>
-                    <div class="slide">
+                    <!-- <div class="slide">
                         <img src="images/pic1.jpg" alt="" width="100%">
-                    </div>
+                    </div> -->
                     <div class="slide">
                         <img src="images/pic2.jpg" alt="" width="100%">
                     </div>
@@ -62,9 +62,9 @@
                 </div>
             </div>
             <div class="little-images">
-                <img src="images/icon4.png" alt="Cat Icon" width="45%">
-                <img src="images/icon5.png" alt="Cat Icon" width="37%">
-                <img src="images/icon6.png" alt="Cat Icon" width="45%">
+                <img class="icon" src="images/icon4.png" alt="Cat Icon" width="45%">
+                <img class="icon" src="images/icon5.png" alt="Cat Icon" width="37%">
+                <img class="icon" src="images/icon6.png" alt="Cat Icon" width="45%">
             </div>
         </div>
     </main>
