--- a/Mini Site/page.html
+++ b/Mini Site/page.html
@@ -48,7 +48,7 @@
                 </div>
             </div>
             <a class="arrow" href="image-page.html">
-                <img src="images/arrow-icon.png" alt="Arrow icon" width="100%">
+                <img src="images/arrow.png" alt="Arrow icon" width="100%">
             </a>
     </main>
     <script src="script.js"></script>
