--- a/Mini Site/index.html
+++ b/Mini Site/index.html
@@ -10,7 +10,7 @@
 <body>
     <main class="container-enter_section">
         <section class="enter-section">
-            <h1 class="enter-title">Click in the letter for a surprise!</h1>
+            <h1 class="enter-title">Clique na carta para uma surpresa!</h1>
             <a href="page.html"><img class="letter-gif" src="images/letter-gif.webp" alt="Letter gif"></a>
         </section>
     </main>
