--- a/Mini Site/page.html
+++ b/Mini Site/page.html
@@ -11,7 +11,7 @@
     <main class="container-page">
         <div class="cute">
             <div class="text-container-left">
-                <button onclick="changeColorL()" class="read-button">Click here to read</button>
+                <button onclick="changeColorL()" class="read-button">Clique aqui para ler!</button>
                 <article class="hidden"  id="view-text-box-left">
                     <h1>Lorem ipsum</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
@@ -29,7 +29,7 @@
                         </article>
             </div>
             <div class="text-container-right">
-                <button onclick="changeColorR()" class="read-button">Click here to read</button>
+                <button onclick="changeColorR()" class="read-button">Clique aqui para ler!</button>
                 <article class="hidden" id="view-text-box-right">
                     <h1>Lorem ipsum</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
