--- a/Mini Site/image-page.html
+++ b/Mini Site/image-page.html
@@ -3,29 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Schoolbell&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png" href="images/head-icon.png">
     <title>Love you</title>
 </head>
 <body class="body-page">
     <main class="image-page-container">
+        <div class="header">
+            <h1>Feliz 9 meses!!</h1>
+        </div>
         <div class="test">
             <div class="little-images">
                 <img class="icon" src="images/icon1.png" alt="Cat Icon" width="45%">
                 <img class="icon" src="images/icon2.png" alt="Cat Icon" width="45%">
-                <img class="icon" src="images/icon3.png" alt="Cat Icon" width="50%">
+                <img class="icon" src="images/batma.png" alt="Cat Icon" width="28%">
             </div>
             <div class="image-box">
                 <div class="images">
-                     <div class="slide first">
+                    <div class="slide first">
                         <img src="images/pic8.jpeg" alt="" width="100%">
                     </div>
                     <div class="slide">
                         <img src="images/pic6.jpeg" alt="" width="100%">
                     </div>
-                    <!-- <div class="slide">
-                        <img src="images/pic1.jpg" alt="" width="100%">
-                    </div> -->
                     <div class="slide">
                         <img src="images/pic2.jpg" alt="" width="100%">
                     </div>
@@ -34,12 +39,6 @@
                     </div>
                     <div class="slide">
                         <img src="images/pic4.jpg" alt="" width="100%">
-                    </div>
-                    <div class="slide">
-                        <img src="images/pic5.jpg" alt="" width="100%">
-                    </div>
-                    <div class="slide">
-                        <img src="images/pic6.jpg" alt="" width="100%">
                     </div>
                     <div class="slide">
                         <img src="images/pic7.jpg" alt="" width="100%">
@@ -62,9 +61,15 @@
                 </div>
             </div>
             <div class="little-images">
-                <img class="icon" src="images/icon4.png" alt="Cat Icon" width="45%">
-                <img class="icon" src="images/icon5.png" alt="Cat Icon" width="37%">
+                <img class="icon" src="images/icon3.png" alt="Cat Icon" width="50%">
+                <img class="icon" id="dupla" src="images/dupla.png" alt="Cat Icon" width="35%">
                 <img class="icon" src="images/icon6.png" alt="Cat Icon" width="45%">
+            </div>
+        </div>
+        <div class="counter">
+            <h1>Eu te amo á:</h1>
+            <div id="contador">
+                Carregando...
             </div>
         </div>
     </main>
