--- a/Mini Site/page.html
+++ b/Mini Site/page.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png" href="images/head-icon.png">
-    <title>Love you</title>
+    <title>Love you</title> 
 </head>
 <body>
     <main class="container-page">
@@ -13,19 +13,10 @@
             <div class="text-container-left">
                 <button onclick="changeColorL()" class="read-button">Clique aqui para ler!</button>
                 <article class="hidden"  id="view-text-box-left">
-                    <h1>Lorem ipsum</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-                        Rem enim nemo illum rerum dolor placeat sed, magnam autem corporis
-                        maxime voluptates consequuntur, quas et iste quam vero. Ipsam, dolore dolorem!
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-                        Rem enim nemo illum rerum dolor placeat sed, magnam autem corporis
-                            maxime voluptates consequuntur, quas et iste quam vero. Ipsam, dolore dolorem!
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-                            Rem enim nemo illum rerum dolor placeat sed, magnam autem corporis
-                            maxime voluptates consequuntur, quas et iste quam vero. Ipsam, dolore dolorem!
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-                        Rem enim nemo illum rerum dolor placeat sed, magnam autem corporis
-                            maxime voluptates consequuntur, quas et iste quam vero. Ipsam, dolore dolorem!</p>
+                    <h1>Oii</h1>
+                    <p>Nesses 9 meses, eu queria reforçar o quanto eu te amo!!</br>
+                        Com você, descobri maneiras diferentes de amar com você e como eu posso ser amada.
+                    </p>
                         </article>
             </div>
             <div class="text-container-right">
