--- a/Mini Site/page.html
+++ b/Mini Site/page.html
@@ -12,30 +12,13 @@
         <div class="cute">
             <div class="text-container-left">
                 <button onclick="changeColorL()" class="read-button">Clique aqui para ler!</button>
-                <article class="hidden"  id="view-text-box-left">
-                    <h1>Oii</h1>
-                    <p>Nesses 9 meses, eu queria reforçar o quanto eu te amo!!</br>
-                        Com você, descobri maneiras diferentes de amar com você e como eu posso ser amada.
-                    </p>
-                        </article>
+                <div class="hidden" id="view-text-box-left">
+                </div>
             </div>
             <div class="text-container-right">
                 <button onclick="changeColorR()" class="read-button">Clique aqui para ler!</button>
-                <article class="hidden" id="view-text-box-right">
-                    <h1>Lorem ipsum</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-                        Rem enim nemo illum rerum dolor placeat sed, magnam autem corporis
-                            maxime voluptates consequuntur, quas et iste quam vero. Ipsam, dolore dolorem!
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-                            Rem enim nemo illum rerum dolor placeat sed, magnam autem corporis
-                            maxime voluptates consequuntur, quas et iste quam vero. Ipsam, dolore dolorem!
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-                        Rem enim nemo illum rerum dolor placeat sed, magnam autem corporis
-                        maxime voluptates consequuntur, quas et iste quam vero. Ipsam, dolore dolorem!
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-                        Rem enim nemo illum rerum dolor placeat sed, magnam autem corporis
-                        maxime voluptates consequuntur, quas et iste quam vero. Ipsam, dolore dolorem!</p>
-                    </article>
+                <div class="hidden" id="view-text-box-right">
+                </div>
                 </div>
             </div>
             <a class="arrow" href="image-page.html">
