--- a/Mini Site/page.html
+++ b/Mini Site/page.html
@@ -13,13 +13,23 @@
             <div class="text-container-left">
                 <button onclick="changeColorL()" class="read-button">Clique aqui para ler!</button>
                 <div class="hidden" id="view-text-box-left">
+                    <h1>
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Debitis nam officiis dolorum perspiciatis
+                        voluptate accusamus quia dolores dolorem explicabo nulla.
+                        Eligendi, nostrum vel praesentium rem magni similique dolor corrupti ducimus!
+                    </h1>
                 </div>
             </div>
             <div class="text-container-right">
                 <button onclick="changeColorR()" class="read-button">Clique aqui para ler!</button>
                 <div class="hidden" id="view-text-box-right">
+                    <h1>
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Debitis nam officiis dolorum perspiciatis
+                        voluptate accusamus quia dolores dolorem explicabo nulla.
+                        Eligendi, nostrum vel praesentium rem magni similique dolor corrupti ducimus!
+                    </h1>
                 </div>
-                </div>
+            </div>
             </div>
             <a class="arrow" href="image-page.html">
                 <img src="images/arrow.png" alt="Arrow icon" width="100%">
